language/tests/error/TypeError06.hashem
bebin azinja() {
  defineFunction(3);
}  
